# matmuls

./: .gitmodules  pyproject.toml
kernels/matmul/pallas/: triton.py
kernels/matmul/triton/: kernel.py  ops_jx.py  ops_pt.py
kernels/quantized_matmul_int248/: utils.py
kernels/quantized_matmul_int248/triton/: kernel.py  ops_pt.py
kernels/quantized_matmul_int4/pallas/: triton.py
kernels/quantized_matmul_int8/pallas/: triton.py
kernels/quantized_matmul_uint4/pallas/: triton.py
kernels/quantized_matmul_uint8/pallas/: triton.py
