[project]
name = "matmuls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax-triton==0.3.0",
    "jax[cuda12-local]==0.8.0",
    "torch==2.8.0",
    "triton==3.4.0"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib",
    "pandas",
    "pytest",
    "tensorboard",
    "xprof",
]
