[project]
name = "matmuls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops",
    "huggingface-hub",
    "jax-triton",
    "jax[cuda12-local]==0.8.0",
    "ptwt",
    "safetensors",
    "sympy",
    "torch==2.9.0",
    "triton==3.5.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
jax-triton = { git = "https://github.com/jax-ml/jax-triton", rev = "0c6c888a7d350cb45aeb87210857b8cc76dd2e92" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "beartype",
    "ipykernel",
    "jaxtyping",
    "matplotlib",
    "pandas",
    "pytest",
    "tensorboard",
    "xprof",
]

[tool.ruff.lint]
ignore = ["E731", "F722"]
